# SimKot-code

./: CMakeLists.txt  main.py  test_app.py
.github/workflows/: Music_Salon_create.sql  ci.yml  main.py  test_app.py
includes/: app.h
src/: app.cpp  main.cpp
